--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/jquery": "^3.5.16",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "babel-loader": "^8.2.5",
@@ -39,6 +40,9 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
+    "jquery": "npm:jQuery@^1.7.4",
+    "jQuery": "^1.7.4",
+    "node-jquery": "^0.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.64.1",
